// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceCard renders an href when supplied 1`] = `
<ServiceCard
  url="https://www.thumbtack.com/k/massage/near-me/"
>
  <a
    className="root"
    href="https://www.thumbtack.com/k/massage/near-me/"
    target="_self"
  >
    Lorem
  </a>
</ServiceCard>
`;

exports[`ServiceCardDescription renders a description when supplied 1`] = `
<ServiceCardDescription>
  <div
    className="descriptionWrap iconBlue"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders a icon and color is blue 1`] = `
<ServiceCardDescription
  icon={<svg />}
>
  <div
    className="descriptionWrap iconBlue"
  >
    <svg />
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders icon color 1`] = `
<ServiceCardDescription
  icon=""
  iconColor="green"
>
  <div
    className="descriptionWrap iconGreen"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardImage render works 1`] = `
<ServiceCardImage
  alt="duck duck goose"
  src="https://www.thumbtack.com/image.png"
>
  <Image
    alt="duck duck goose"
    className="image"
    containerAspectRatio={1.6}
    src="https://www.thumbtack.com/image.png"
  >
    <picture
      className="picture image"
    >
      <img
        alt="duck duck goose"
        className="imageStart"
        onError={[Function]}
        onLoad={[Function]}
        sizes="0px"
        src="https://www.thumbtack.com/image.png"
        style={
          Object {
            "height": 0,
            "overflow": "hidden",
            "paddingTop": "62.5%",
          }
        }
      />
    </picture>
    <noscript>
      <img
        alt="duck duck goose"
        src="https://www.thumbtack.com/image.png"
      />
    </noscript>
  </Image>
</ServiceCardImage>
`;

exports[`ServiceCardTitle renders a title when supplied 1`] = `
<ServiceCardTitle>
  <div
    className="title"
    title="Lorem"
  >
    Lorem
  </div>
</ServiceCardTitle>
`;
